welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:0: error: not enough arguments for method growFlowers: (r: java.awt.Color, c: java.awt.Color, o: java.awt.Color, p: java.awt.Color, g: java.awt.Color)Unit.
Unspecified value parameters r, c, o, ...
		growFlowers();
                           ^